force-app/main/default/objects/NV_Log__c/NV_Log__c.object-meta.xml
<CustomObject>
    <description>Global Logging Object</description>
    <label>NV Log</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Nvidia Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NV Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>