force-app/main/default/objects/NV_Log__c/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <description>This is the Additional Email to whom email will be sent along with Dev team.</description>
    <label>Additional Email</label>
    <type>Email</type>
</CustomField>