force-app/main/default/objects/NV_Log__c/fields/EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>EndpointURL__c</fullName>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>