force-app/main/default/objects/NV_Log__c/fields/Functionality_Name__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Name__c</fullName>
    <label>Functionality Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service: SAP RMA Callout</fullName>
            </value>
            <value>
                <fullName>IDM: User Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>