force-app/main/default/objects/NV_Log__c/fields/Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Outbound__c</fullName>
    <label>Inbound Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>