force-app/main/default/objects/NV_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error: Batch</fullName>
            </value>
            <value>
                <fullName>Error: Trigger</fullName>
            </value>
            <value>
                <fullName>Error: Callout</fullName>
            </value>
            <value>
                <fullName>Error: Other</fullName>
            </value>
            <value>
                <fullName>Error: Future Method</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>