force-app/main/default/objects/NV_Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <inlineHelpText>Record Id or list of record Ids or Batch Job Id etc which can help to locate the exact record.</inlineHelpText>
    <label>Record Id(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>