force-app/main/default/objects/NV_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>