force-app/main/default/objects/NV_Log__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field triggers Email to dev team and additional Email.</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>