force-app/main/default/objects/NV_Log__c/fields/WebMethod_Name__c.field-meta.xml
<CustomField>
    <fullName>WebMethod_Name__c</fullName>
    <label>WebMethod Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>