force-app/main/default/objects/NV_Log__c/fields/WebServiceName__c.field-meta.xml
<CustomField>
    <fullName>WebServiceName__c</fullName>
    <label>Web Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>