force-app/main/default/objects/NV_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Log_Type__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <columns>WebServiceName__c</columns>
    <columns>Source_System__c</columns>
    <columns>Target_System__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>