force-app/main/default/objects/NV_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>StatusCode__c</columns>
    <columns>Status__c</columns>
    <columns>WebMethod_Name__c</columns>
    <columns>WebServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Type__c</columns>
    <columns>Inbound_Outbound__c</columns>
    <columns>Source_System__c</columns>
    <columns>Target_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>