force-app/main/default/objects/NV_Log__c/listViews/Logs_created_Today.listView-meta.xml
<ListView>
    <fullName>Logs_created_Today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>EndpointURL__c</columns>
    <columns>Exception__c</columns>
    <columns>Inbound_Outbound__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Source_System__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <columns>Target_System__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Logs created Today</label>
    <language>en_US</language>
</ListView>